--- a/Lab2/Lab2_proj/ClientPart/mainwindow.ui
+++ b/Lab2/Lab2_proj/ClientPart/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1200</width>
-    <height>817</height>
+    <width>1366</width>
+    <height>768</height>
    </rect>
   </property>
   <property name="maximumSize">
@@ -23,6 +23,9 @@
    <string notr="true"/>
   </property>
   <widget class="QWidget" name="centralwidget">
+   <property name="styleSheet">
+    <string notr="true"/>
+   </property>
    <layout class="QHBoxLayout" name="horizontalLayout_3">
     <property name="spacing">
      <number>0</number>
@@ -41,8 +44,12 @@
     </property>
     <item>
      <widget class="QStackedWidget" name="stackedWidget">
+      <property name="styleSheet">
+       <string notr="true">background-color:#121212 ;
+</string>
+      </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="LoginMenu">
        <property name="sizePolicy">
@@ -67,7 +74,9 @@
        <property name="styleSheet">
         <string notr="true">/*--------------------------------Backdround color--------------------------------*/
 #LoginMenu{
-  background-color:qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(18, 18, 18, 255), stop:0.47191 rgba(4, 20, 11, 255), stop:1 rgba(18, 18, 18, 255));
+
+
+background-color:qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(18, 18, 18, 255), stop:0.483146 rgba(7, 34, 19, 255), stop:1 rgba(18, 18, 18, 255));
 }
 /*--------------------------------Button--------------------------------*/
 
@@ -75,7 +84,7 @@ QPushButton{
 	
 	background-color: #2C2C2C;
 	
-	border: 2px solid #111111;
+	border: 2px solid #1D1D1D;
 	border-radius:10px;
 
 	color:#B9B9B9;
@@ -151,6 +160,16 @@ QLineEdit:focus{
 
 	border-color: #15733C;
 }
+
+/*--------------------------------Line edit--------------------------------*/
+
+QCheckBox{
+	background-color: none;
+	shadow: 3px 3px white;
+
+
+
+}
 </string>
        </property>
        <layout class="QVBoxLayout" name="verticalLayout_4" stretch="0">
@@ -189,19 +208,6 @@ QLineEdit:focus{
           <property name="verticalSpacing">
            <number>0</number>
           </property>
-          <item row="2" column="1">
-           <spacer name="verticalSpacer_6">
-            <property name="orientation">
-             <enum>Qt::Vertical</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>0</width>
-              <height>0</height>
-             </size>
-            </property>
-           </spacer>
-          </item>
           <item row="1" column="0">
            <spacer name="horizontalSpacer">
             <property name="orientation">
@@ -215,8 +221,47 @@ QLineEdit:focus{
             </property>
            </spacer>
           </item>
+          <item row="1" column="2">
+           <spacer name="horizontalSpacer_2">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>0</width>
+              <height>0</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+          <item row="0" column="1">
+           <spacer name="verticalSpacer_8">
+            <property name="orientation">
+             <enum>Qt::Vertical</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>0</width>
+              <height>0</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+          <item row="2" column="1">
+           <spacer name="verticalSpacer_6">
+            <property name="orientation">
+             <enum>Qt::Vertical</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>0</width>
+              <height>0</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
           <item row="1" column="1">
-           <layout class="QGridLayout" name="gridLayout_2" rowstretch="0,6,8">
+           <layout class="QGridLayout" name="gridLayout_2" rowstretch="0,9,10">
             <property name="spacing">
              <number>0</number>
             </property>
@@ -404,10 +449,10 @@ QLineEdit:focus{
                <number>0</number>
               </property>
               <property name="verticalSpacing">
-               <number>5</number>
+               <number>10</number>
               </property>
               <item row="2" column="0">
-               <widget class="QLineEdit" name="lineEdit_2">
+               <widget class="QLineEdit" name="PassLineEdit">
                 <property name="sizePolicy">
                  <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
                   <horstretch>0</horstretch>
@@ -464,7 +509,7 @@ QLineEdit:focus{
                </widget>
               </item>
               <item row="1" column="0">
-               <widget class="QLineEdit" name="lineEdit">
+               <widget class="QLineEdit" name="LoginLineEdit">
                 <property name="sizePolicy">
                  <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
                   <horstretch>0</horstretch>
@@ -525,32 +570,6 @@ QLineEdit:focus{
             </item>
            </layout>
           </item>
-          <item row="1" column="2">
-           <spacer name="horizontalSpacer_2">
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>0</width>
-              <height>0</height>
-             </size>
-            </property>
-           </spacer>
-          </item>
-          <item row="0" column="1">
-           <spacer name="verticalSpacer_8">
-            <property name="orientation">
-             <enum>Qt::Vertical</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>0</width>
-              <height>0</height>
-             </size>
-            </property>
-           </spacer>
-          </item>
          </layout>
         </item>
        </layout>
@@ -565,7 +584,7 @@ QLineEdit:focus{
        <property name="styleSheet">
         <string notr="true">/*--------------------------------Backdround color--------------------------------*/
 #RegMenu{
-  background-color:qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(18, 18, 18, 255), stop:0.47191 rgba(4, 20, 11, 255), stop:1 rgba(18, 18, 18, 255));
+  background-color:qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(18, 18, 18, 255), stop:0.483146 rgba(7, 34, 19, 255), stop:1 rgba(18, 18, 18, 255));
 }
 /*--------------------------------Button--------------------------------*/
 
@@ -573,7 +592,7 @@ QPushButton{
 	
 	background-color: #2C2C2C;
 	
-	border: 2px solid #111111;
+	border: 2px solid #1D1D1D;
 	border-radius:10px;
 
 	color:#B9B9B9;
@@ -746,7 +765,7 @@ QLineEdit:focus{
              <number>2</number>
             </property>
             <item row="0" column="1">
-             <widget class="QPushButton" name="RerRegButton">
+             <widget class="QPushButton" name="RegRegButton">
               <property name="sizePolicy">
                <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
                 <horstretch>0</horstretch>
@@ -814,7 +833,7 @@ QLineEdit:focus{
           <item row="3" column="1">
            <layout class="QGridLayout" name="gridLayout" rowstretch="1,10,10,10">
             <item row="2" column="0">
-             <widget class="QLineEdit" name="lineEdit_4">
+             <widget class="QLineEdit" name="RegPassLineEdit">
               <property name="sizePolicy">
                <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
                 <horstretch>0</horstretch>
@@ -842,7 +861,7 @@ QLineEdit:focus{
              </widget>
             </item>
             <item row="1" column="0">
-             <widget class="QLineEdit" name="lineEdit_3">
+             <widget class="QLineEdit" name="RegLogLineEdit">
               <property name="sizePolicy">
                <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
                 <horstretch>0</horstretch>
@@ -870,7 +889,7 @@ QLineEdit:focus{
              </widget>
             </item>
             <item row="3" column="0">
-             <widget class="QLineEdit" name="lineEdit_5">
+             <widget class="QLineEdit" name="RegConfLineEdit">
               <property name="sizePolicy">
                <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
                 <horstretch>0</horstretch>
@@ -922,13 +941,13 @@ QLineEdit:focus{
   </widget>
  </widget>
  <tabstops>
-  <tabstop>lineEdit_3</tabstop>
-  <tabstop>lineEdit_4</tabstop>
-  <tabstop>lineEdit_5</tabstop>
-  <tabstop>RerRegButton</tabstop>
+  <tabstop>RegLogLineEdit</tabstop>
+  <tabstop>RegPassLineEdit</tabstop>
+  <tabstop>RegConfLineEdit</tabstop>
+  <tabstop>RegRegButton</tabstop>
   <tabstop>RegGoBackButton</tabstop>
-  <tabstop>lineEdit</tabstop>
-  <tabstop>lineEdit_2</tabstop>
+  <tabstop>LoginLineEdit</tabstop>
+  <tabstop>PassLineEdit</tabstop>
   <tabstop>RemMeCheckBox</tabstop>
   <tabstop>LogButton</tabstop>
   <tabstop>RegButton</tabstop>
