--- a/Lab2/Lab2_proj/ClientPart/mainwindow.ui
+++ b/Lab2/Lab2_proj/ClientPart/mainwindow.ui
@@ -6,9 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1366</width>
-    <height>768</height>
+    <width>1040</width>
+    <height>585</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>1040</width>
+    <height>585</height>
+   </size>
   </property>
   <property name="maximumSize">
    <size>
@@ -74,31 +86,32 @@
        <property name="styleSheet">
         <string notr="true">/*--------------------------------Backdround color--------------------------------*/
 #LoginMenu{
-
-
-background-color:qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(18, 18, 18, 255), stop:0.483146 rgba(7, 34, 19, 255), stop:1 rgba(18, 18, 18, 255));
+background-color:qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(23, 30, 34, 255), stop:0.5 rgba(30, 40, 45, 255), stop:1 rgba(23, 30, 34, 255));
 }
 /*--------------------------------Button--------------------------------*/
 
 QPushButton{
 	
-	background-color: #2C2C2C;
+	background-color: rgba(242, 150, 47, 220);
 	
-	border: 2px solid #1D1D1D;
+
 	border-radius:10px;
 
-	color:#B9B9B9;
-	font-family: &quot;Open Sans Light&quot;;
-	font-size: 15px;
+	color:#1b2327;
+	font-family:  &quot;Calibri Bold&quot;;
+	font-size: 17px;
 
 }
 
 QPushButton:hover:!pressed{
-	background-color: #136836;
+	background-color: #455A64;
+color:#EEEEEE;
+
 }
 
 QPushButton:hover:pressed{
-	background-color: #082E18;
+	background-color: #37474F;
+color:#DDDDDD;
 }
 
 /*--------------------------------Check box--------------------------------*/
@@ -133,16 +146,16 @@ QCheckBox::indicator:unchecked:hover {
 /*--------------------------------Line edit--------------------------------*/
 
 QLineEdit{
-	background-color:#262626 ;
+	background-color:#37474F ;
 
 	border-style: solid;
 	border-width: 2px;
-	border-color: #565656;
+	border-color: #455A64;
 	border-radius: 10px;
 
-	color:#CCCCCC;
-	font-family: &quot;Open Sans Light&quot;;
-	font-size: 15px;
+	color:#ECEFF1;
+	font-family: &quot;Calibri&quot;;
+	font-size: 17px;
 
 	padding-left:10px;
 	padding-right:10px;
@@ -150,24 +163,17 @@ QLineEdit{
 
 
 QLineEdit:hover{
-	background-color: #212121;
- 
-    border-color: #115C30;
+	background-color: #263238;
 }
 
 QLineEdit:focus{
-	background-color: #1A1A1A;
-
-	border-color: #15733C;
+	background-color: #1c2428;
 }
 
 /*--------------------------------Line edit--------------------------------*/
 
 QCheckBox{
 	background-color: none;
-	shadow: 3px 3px white;
-
-
 
 }
 </string>
@@ -389,7 +395,7 @@ QCheckBox{
                 </property>
                 <property name="font">
                  <font>
-                  <family>Open Sans Light</family>
+                  <family>Calibri Bold</family>
                   <pointsize>-1</pointsize>
                   <weight>50</weight>
                   <italic>false</italic>
@@ -584,44 +590,76 @@ QCheckBox{
        <property name="styleSheet">
         <string notr="true">/*--------------------------------Backdround color--------------------------------*/
 #RegMenu{
-  background-color:qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(18, 18, 18, 255), stop:0.483146 rgba(7, 34, 19, 255), stop:1 rgba(18, 18, 18, 255));
+background-color:qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(23, 30, 34, 255), stop:0.5 rgba(30, 40, 45, 255), stop:1 rgba(23, 30, 34, 255))
 }
 /*--------------------------------Button--------------------------------*/
 
 QPushButton{
 	
-	background-color: #2C2C2C;
+	background-color: rgba(242, 150, 47, 220);
 	
-	border: 2px solid #1D1D1D;
+
 	border-radius:10px;
 
-	color:#B9B9B9;
-	font-family: &quot;Open Sans Light&quot;;
-	font-size: 15px;
+	color:#1b2327;
+	font-family:  &quot;Calibri Bold&quot;;
+	font-size: 17px;
 
 }
 
 QPushButton:hover:!pressed{
-	background-color: #136836;
+	background-color: #455A64;
+color:#EEEEEE;
+
 }
 
 QPushButton:hover:pressed{
-	background-color: #082E18;
+	background-color: #37474F;
+color:#DDDDDD;
+}
+
+/*--------------------------------Check box--------------------------------*/
+QCheckBox {
+	color:#999999;
+	font: italic 9pt &quot;Open Sans Light&quot;;
+	border-radius:6px;
+}
+
+QCheckBox::indicator:checked {
+    background: #198C49;
+	border-radius:6px;
+}
+
+QCheckBox::indicator:unchecked {
+    background:#990329;
+	border-radius:6px;
+}
+
+QCheckBox::indicator:checked:hover {
+  	border: 2px solid #198C49;
+    background: #15733C;
+	border-radius:6px;
+}
+
+QCheckBox::indicator:unchecked:hover {
+	border: 2px solid #990329;
+	background:#800322;
+	border-radius:6px;
 }
 
 /*--------------------------------Line edit--------------------------------*/
 
 QLineEdit{
-	background-color:#262626 ;
+	background-color:#37474F ;
 
 	border-style: solid;
 	border-width: 2px;
-	border-color: #565656;
+	border-color: #455A64;
 	border-radius: 10px;
 
-	color:#CCCCCC;
-	font-family: &quot;Open Sans Light&quot;;
-	font-size: 15px;
+	color:#ECEFF1;
+	font-family: &quot;Calibri&quot;;
+	font-size: 17px;
 
 	padding-left:10px;
 	padding-right:10px;
@@ -629,15 +667,21 @@ QLineEdit{
 
 
 QLineEdit:hover{
-	background-color: #212121;
- 
-    border-color: #115C30;
+	background-color: #263238;
 }
 
 QLineEdit:focus{
-	background-color: #1A1A1A;
+	background-color: #1c2428;
+}
 
-	border-color: #15733C;
+/*--------------------------------Line edit--------------------------------*/
+
+QCheckBox{
+	background-color: none;
+	shadow: 3px 3px white;
+
+
+
 }
 </string>
        </property>
